<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_40"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_80"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_1"

            app:layout_constraintStart_toEndOf="@id/button7"
            app:layout_constraintTop_toBottomOf="@id/button4"
            app:layout_constraintDimensionRatio="2:1"
            >
        </Button>

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_2"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@id/vertical_40"
            app:layout_constraintStart_toStartOf="parent"
            >
        </Button>

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_3"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button4"
            app:layout_constraintTop_toBottomOf="@id/button7"
            app:layout_constraintBottom_toBottomOf="parent"
            >
        </Button>

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_4"

            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@id/button6"
            app:layout_constraintStart_toEndOf="@id/button7"
            app:layout_constraintTop_toBottomOf="@id/button5"
            app:layout_constraintBottom_toTopOf="@id/button1"
            >
        </Button>

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_5"

            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@id/vertical_40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/horizontal_20"
            >
        </Button>

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_6"

            app:layout_constraintBottom_toBottomOf="@id/button4"
            app:layout_constraintEnd_toEndOf="@id/vertical_80"
            app:layout_constraintTop_toTopOf="@id/button5"
            app:layout_constraintDimensionRatio="1:2"
            >
        </Button>

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_7"

            app:layout_constraintBottom_toTopOf="@id/button2"
            app:layout_constraintDimensionRatio="1:2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button5"
            >
        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>